--- a/platformio.ini
+++ b/platformio.ini
@@ -29,6 +29,9 @@ build_flags =
     -DCORE_DEBUG_LEVEL=3
     -DENABLE_OTA=1
 
+; 忽略框架内置 WebServer 库，规避 NetworkServer.h / FS.h 报错
+lib_ignore = WebServer
+
 ; OTA配置 (无线更新固件)
 ; 首次上传使用USB，之后可以使用网络OTA
 ; upload_protocol = espota
