feat: 不使用时请取消enable,避免嗡嗡响

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,9 @@ board = airm2m_core_esp32c3
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
-
+; upload_protocol = custom
+; upload_command  = esptool.py -c esp32c3 -p usb write_flash 0x0 $SOURCE
+; upload_protocol = espusb
 ; 库依赖
 lib_deps =  
    ESP32Async/ESPAsyncWebServer
@@ -27,10 +29,15 @@ board_build.filesystem = littlefs
 ; 编译选项
 build_flags = 
     -DCORE_DEBUG_LEVEL=3
-    -DENABLE_OTA=1
+    ; -DENABLE_OTA=1
+    ; -D ARDUINO_USB_MODE=1
+    ; -D ARDUINO_USB_CDC_ON_BOOT=1
 
 ; 忽略框架内置 WebServer 库，规避 NetworkServer.h / FS.h 报错
 lib_ignore = WebServer
+
+; 启用原生 USB CDC 串口（上电即启用）
+board_build.arduino.usb_cdc_on_boot = 0
 
 ; OTA配置 (无线更新固件)
 ; 首次上传使用USB，之后可以使用网络OTA
